@@ -1,3 +1,8 @@
+2011-10-02  Joel Brobecker  <brobecker@adacore.com>
+
+	* breakpoint.c (bkpt_print_recreate): Add call to
+	print_recreate_thread.
+
 2011-09-29  Mike Frysinger  <vapier@gentoo.org>
 
 	* common/linux-ptrace.h (PTRACE_GETFDPIC, PTRACE_GETFDPIC_EXEC,
